fixed some spacing, added some media queries for stuff

--- a/styles/all.css
+++ b/styles/all.css
@@ -1,6 +1,30 @@
-* {}
-html {
-  font-family: 'objektiv-mk1-n4', 'objektiv-mk1', sans-serif;
+@font-face {
+  font-family: 'FiraSans-Regular.ttf';
+  src: url('../fonts/Fira_Sans/FiraSans-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'FiraSans-Bold.ttf';
+  src: url('../fonts/Fira_Sans/FiraSans-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'FiraSans-ExtraBold.ttf';
+  src: url('../fonts/Fira_Sans/FiraSans-ExtraBold.ttf');
+}
+
+@font-face {
+  font-family: 'FiraSans-Black.ttf';
+  src: url('../fonts/Fira_Sans/FiraSans-Black.ttf');
+}
+
+@font-face {
+  font-family: 'FiraSans-LightItalic.ttf';
+  src: url('../fonts/Fira_Sans/FiraSans-LightItalic.ttf');
+}
+
+body {
+  font-family: 'FiraSans-Regular.ttf';
   font-weight: 400;
   font-style: normal;
   font-size: 12px;
@@ -14,9 +38,7 @@ a:link {text-decoration:none; color:rgba(0,0,0,1.0);}
 a:visited {text-decoration:none; color:rgba(0,0,0,1.0);}
 a:hover {
   text-decoration: none;
-  font-family: 'objektiv-mk1-n7', 'objektiv-mk1', sans-serif;
-  font-weight: 700;
-  font-style: normal;
+  font-family: 'FiraSans-Bold.ttf';
 }
 a:active {text-decoration: none;}
 
@@ -52,7 +74,22 @@ footer li a {
 }
 
 /* IDs */
-@media (max-width: 750px) {
+
+#datetime {
+  text-align:center;
+  font-size:150%;
+  line-height: 150%;
+}
+@media(max-width: 480px) {
+  #datetime {font-size: 125%;}
+}
+@media(min-width: 750px) {
+  #datetime {font-size: 175%;}
+}
+@media(min-width: 1000px) {
+  #datetime {font-size: 200%;}
+}
+/*@media (max-width: 750px) {
   #datetime {font-size: 125%;}
 }
 @media (min-width: 750px) {
@@ -63,52 +100,55 @@ footer li a {
   display: block;
   text-align: center;
 }
-}
+}*/
 
-#wineries {display: none;}
-#cideries {display: none;}
+#wineries {padding: 2%;}
+#cideries {padding: 2%;}
+
+#music {}
 
 /* classes */
 
 .logo {
-  width: 100%;
+  width: 90%;
+  max-width: 1500px;
   margin-left: auto;
   margin-right: auto;
   display: block;
 }
 
 .italic {
-  font-family: 'objektiv-mk1-i3', 'objektiv-mk1', sans-serif;
-  font-weight: 300;
+  font-family: 'FiraSans-LightItalic.ttf';
   font-style: italic;
 }
 
-.category {
-  font-family: 'objektiv-mk1-n8', 'objektiv-mk1', sans-serif;
-  font-weight: 800;
-  font-style: normal;
-  font-size: 200%;
+.category img {
+  width: 40%;
 }
+@media (max-width: 750px) {
+  .category img {width:100%;}
+}
+
+@media (min-width: 750px) {
+  .category img {width: 70%;}
+}
+
 .business_name {
   padding-top: 1.5em;
   font-size: 175%;
-  font-family: 'objektiv-mk1-n7', 'objektiv-mk1', sans-serif;
-  font-weight: 700;
-  font-style: normal;
+  font-family: 'FiraSans-Bold.ttf';
   white-space: nowrap;
 }
 
 .business_name a:hover {
-  font-family: 'objektiv-mk1-n9', 'objektiv-mk1', sans-serif;
-  font-weight: 900;
-  font-style: normal;
+  font-family: 'FiraSans-Black.ttf';
   white-space: nowrap;
 }
 
 .business_address {font-size: 125%; white-space: nowrap;}
 
 .business_address a:hover {
-  font-family: 'objektiv-mk1-n7', 'objektiv-mk1', sans-serif;
+  font-family: 'FiraSans-Bold.ttf';
   font-weight: 700;
   font-style: normal;
 }
@@ -117,7 +157,10 @@ footer li a {
 
 .strip {
   width:100%;
+  max-width: 1000px;
   margin-top:0;
+  margin-left: auto;
+  margin-right: auto;
   padding:0;
   display:block;
 }
@@ -151,17 +194,13 @@ table img {
 
 .venue {
   font-size: 200%;
-  font-family: 'objektiv-mk1-n7', 'objektiv-mk1', sans-serif;
-  font-weight: 700;
-  font-style: normal;
+  font-family: 'FiraSans-Bold.ttf';
   text-align: center;
   padding-top: 4%;
 }
 
 .day {
-  font-family: 'objektiv-mk1-n9', 'objektiv-mk1', sans-serif;
-  font-weight: 900;
-  font-style: normal;
+  font-family: 'FiraSans-Black.ttf';
   font-size: 150%;
   text-align: center;
   padding-top: 2%;
@@ -169,9 +208,7 @@ table img {
 }
 
 .time {
-  font-family: 'objektiv-mk1-n9', 'objektiv-mk1', sans-serif;
-  font-weight: 900;
-  font-style: normal;
+  font-family: 'FiraSans-Black.ttf';
   font-size: 200%;
   letter-spacing: -.5px;
   text-align: right;
@@ -181,17 +218,13 @@ table img {
 }
 
 .name {
-  font-family: 'objektiv-mk1-n7', 'objektiv-mk1', sans-serif;
-  font-weight: 700;
-  font-style: normal;
+  font-family: 'FiraSans-Bold.ttf';
   font-size: 150%;
   width: auto;
 }
 
 .name a:hover {
-  font-family: 'objektiv-mk1-n9', 'objektiv-mk1', sans-serif;
-  font-weight: 900;
-  font-style: normal;
+  font-family: 'FiraSans-Black.ttf';
 }
 @media (max-width: 750px) {
 .garage_name {width: 80%;} }
@@ -201,13 +234,15 @@ garage_name {width: 40%;} }
 
 .garage_address {font-size:150%;}
 
-.garage_description {font-size: 125%; margin-bottom: 4%;}
+.garage_description {
+  font-size: 125%;
+  margin-bottom: 4%;
+}
 
 .note {font-size: 150%;}
 
 .description {
-  font-family: 'objektiv-mk1-i3', 'objektiv-mk1', sans-serif;
-  font-weight: 300;
+  font-family: 'FiraSans-LightItalic.ttf';
   font-style: italic;
   font-size: 125%;
 }
@@ -216,28 +251,27 @@ garage_name {width: 40%;} }
   font-size: 150%;
 }
 
-.questions td {padding-bottom: 2%; width:auto;}
+.questions td {
+  padding-bottom: 2%;
+  width:auto;
+}
 
-.q_num {width: 5% !important;}
+.q_num {
+  width: 6% !important;
+  text-align: right;
+  padding-right: 2em;
+  padding-left: 1em;
+}
 
-.answer_1 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.ansbtn_1 {background: rgba(0,0,0,0.2); visibility:visible;}
-.answer_2 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_3 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_4 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_5 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_6 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_7 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_8 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_9 {text-align: center; width:60% !important; padding-bottom: 2em;  visibility:hidden;}
-.answer_10 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_11 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_12 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_13 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_14 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_15 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_16 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_17 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_18 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_19 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
-.answer_20 {text-align: center; width:60% !important; padding-bottom: 2em; visibility:hidden;}
+.answer {
+  text-align: center;
+  width: auto;
+  padding-bottom: 3%;
+  background: rgba(174,138,96,1.0);
+}
+
+.padding-l {width: auto;}
+.padding-r {width: auto;}
+
+.header_date {text-align: right; padding-right: 1.5em;}
+.header_time {text-align: left;}
